Add polska metronome

--- a/app/views/abceditor.scala.html
+++ b/app/views/abceditor.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-<!-- PureScript code for the ABC editor -->
+<!-- Transpiled PureScript code for the ABC editor -->
 @scripts = {
     <script src="@routes.Assets.at("javascripts/vexflow-debug.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/abc-editor.js")" type="text/javascript"></script>
