--- a/app/views/credits.scala.html
+++ b/app/views/credits.scala.html
@@ -42,6 +42,8 @@
                 <td><a href="http://argonaut.io/">argonaut</a></td>
              </tr>
           </table>
+          <p>The idea for the polska metronome was borrowed from Ben Potton of the band
+            <a href="http://www.jigfoot.com/">Jigfoot</a>. </p>
 
     </div>
 }
