--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,6 +32,10 @@
         <!-- ABC tutorial -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/abcTutorial.css")">
 }
+@if(title == "metronome") {
+        <!-- polska metronome -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/metronome.css")">
+}
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")" >
         <script src="@routes.Assets.at("javascripts/jquery-2.0.3.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/tradtunestore.js")?version=111" type="text/javascript"></script>
